	(rmail-mime-show-images): New option.
	(rmail-mime-total-number-of-bulk-attachments): Remove variable and all
	references to it, since it wasn't actually used for anything.
	(rmail-mime-insert-image): New function.
	(rmail-mime-image): Use rmail-mime-insert-image.
	(rmail-mime-bulk-handler): Remove optional `image' argument, instead
	obey the value of `rmail-mime-show-images' option.

2009-09-25  David Engster  <deng@randomsample.de>

	* progmodes/hideshow.el (hs-show-block): Run `hs-show-hook'.  (Bug#4548)

2009-09-24  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: Does not highlight trailing spaces While point is
	at end of line.  Does not highligt spaces at beginning of buffer
	while point is at beginning of buffer.  Does not highlight spaces
	at end of buffer while point is at end of buffer.  (Bug#4177)
	New version 12.0.
	(whitespace-display-mappings): Adjust initialization.
	(whitespace-point, whitespace-font-lock-refontify): New vars.
	(whitespace-color-on, whitespace-color-off): Adjust code.
	(whitespace-trailing-regexp, whitespace-empty-at-bob-regexp)
	(whitespace-empty-at-eob-regexp, whitespace-space-regexp)
	(whitespace-tab-regexp, whitespace-post-command-hook): New funs.

2009-09-24  Chong Yidong  <cyd@stupidchicken.com>

	* nxml/nxml-mode.el: Alias xml-mode to nxml-mode.

	* textmodes/sgml-mode.el: Remove xml-mode alias.

	* files.el (auto-mode-alist, conf-mode-maybe)
	(magic-fallback-mode-alist): Revert 2009-09-18 and 2009-09-21
	changes.

2009-09-24  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-cmds.el (c-scan-conditionals): A new function like
	c-forward-conditionals, but it doesn't move point and doesn't set
	the mark.
	(c-up-conditional, c-up-conditional-with-else, c-down-conditional)
	(c-down-conditional-with-else, c-backward-conditional)
	(c-forward-conditional): Refactor to use c-scan-conditionals.

2009-09-24  Juanma Barranquero  <lekktu@gmail.com>

	* help-fns.el (help-downcase-arguments): New option, defaulting to nil.